--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,30 @@
 @import-normalize;
 
+@font-face {
+    font-family: 'Montserrat';
+    src: url('/src/fonts/Montserrat/Montserrat-VF.woff2')
+            format('woff2 supports variations'),
+        url('/src/fonts/Montserrat/Montserrat-VF.woff2')
+            format('woff2-variations');
+    font-weight: 100 1000;
+}
+
+@font-face {
+    font-family: 'Montserrat-Italic';
+    src: url('/src/fonts/Montserrat/Montserrat-Italic-VF.woff2')
+            format('woff2 supports variations'),
+        url('/src/fonts/Montserrat/Montserrat-Italic-VF.woff2')
+            format('woff2-variations');
+    font-weight: 100 1000;
+}
+
+@font-face {
+    font-family: 'NewRocker';
+    src: url('/src/fonts/NewRocker/NewRocker.woff2') format('woff2');
+    font-weight: 400;
+    font-display: swap;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
