--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    background-color: black;
 }
 
 code {
